[project]
name = "md-to-pdf"
version = "0.1.0"
description = "AA website to convert Markdown to pdf, along with syntax highlighting &amp; image uploading."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "markdown2>=2.5.5",
    "pygments>=2.19.2",
    "weasyprint>=68.1",
]
